# aws-serverless-developer-experience-workshop-python

./: .gitignore  README.md  pyproject.toml
unicorn_contracts/: .gitignore  Makefile  README.md  api.yaml  cdk.json  packeged-testing.yaml  pyproject.toml  samconfig.toml  samconfig.yaml  subscriber-policies.yaml  template.yaml  template_DELETE_ME.yaml  template_steve.yaml
unicorn_contracts/cdk/: app.py  event_schema.py  subscriber_policies.py  unicorn_contracts_stack.py
unicorn_contracts/cdk/app/: unicorn_contracts_stack.py
unicorn_contracts/cdk/cdk/: cdk_stack.py  contracts_service.py
unicorn_contracts/cdk/lib/: helper.py
unicorn_contracts/iac/: README.md  api.yaml  contracts-service.yaml  domain.yaml  samconfig.toml
unicorn_contracts/iac/schema-registry/: ContractStatusChanged-schema.yaml
unicorn_contracts/infrastructure/: README.md  domain.yaml  samconfig.toml
unicorn_contracts/infrastructure/contracts-service/: api.yaml  samconfig.toml  template.yaml
unicorn_contracts/infrastructure/schema-registry/: ContractStatusChanged-schema.yaml
unicorn_contracts/integration/: ContractStatusChanged.json  event-schemas.yaml  subscriber-policies.yaml
unicorn_contracts/src/contracts_service/: contract_event_handler.py  contract_status.py  create_contract.py  create_contract_function.py  enums.py  exceptions.py  helper.py  update_contract.py  update_contract_function.py
unicorn_contracts/tests/events/: contract_status_changed.json  event.json  put_events.json
unicorn_contracts/tests/integration/: __init__.py  cwlogs.py  test_create_contract_apigw.py  test_update_contract_apigw.py
unicorn_contracts/tests/unit/: conftest.py  event_generator.py  events.py  helper.py  lambda_context.py  test_contract_event_handler.py  test_create_contract.py  test_create_contract_function.py  test_helper.py  test_update_contract.py  test_update_contract_function.py
unicorn_properties/: .gitignore  Makefile  README.md  cdk.context.json  pyproject.toml  samconfig.toml  samconfig.yaml  subscriber-policies.yaml  subscriptions.yaml  template.yaml
unicorn_properties/cdk/: app.py  pyproject.toml  unicorn_properties_stack.py
unicorn_properties/cdk.out/: manifest.json  tree.json  uni-prop-local-properties.assets.json  uni-prop-local-properties.template.json
unicorn_properties/cdk/app/: unicorn_properties_contracts_stack.py  unicorn_properties_events_stack.py  unicorn_properties_integration_with_contracts_stack.py  unicorn_properties_integration_with_web_stack.py  unicorn_properties_property_approval_stack.py
unicorn_properties/cdk/lib/: helper.py
unicorn_properties/cloudformation/: event-schemas.yaml
unicorn_properties/integration/: PublicationEvaluationCompleted.json  event-schemas.yaml  subscriber-policies.yaml  subscriptions.yaml
unicorn_properties/src/properties_service/: content_integrity_validator_function.py  contract_content_integrity_validator.py  contract_exists_checker.py  contract_exists_checker_function.py  contract_status_changed.py  contract_status_changed_event_handler.py  properties_approval_sync_function.py  wait_for_contract_approval_function.py
unicorn_properties/src/state_machine/: property_approval.asl.yaml
unicorn_properties/state_machine/: property_approval.asl.yaml
unicorn_properties/tests/events/: put_event_publication_approval_requested.json
unicorn_properties/tests/integration/: __init__.py  test_contract_status_changed_event.py  test_publication_approval_requested_event.py
unicorn_properties/tests/unit/: conftest.py  helper.py  lambda_context.py  test_content_integrity_validator_function.py  test_contract_exists_checker_function.py  test_contract_status_changed.py  test_contract_status_changed_event_handler.py  test_contract_status_checker.py  test_properties_approval_sync_function.py  test_wait_for_contract_approval_function.py
unicorn_shared/: Makefile  pyproject.toml  samconfig.yaml  template.yaml  uni-prop-images.yaml  uni-prop-namespaces.yaml  uni-prop-shared.yaml
unicorn_shared/cdk/: app.py  pyproject.toml  unicorn_shared_stack.py
unicorn_shared/cdk/app/: unicorn_images.py  unicorn_namespaces.py
unicorn_shared/src/unicorn_shared/: __init__.py  constructs.py
unicorn_web/: .gitignore  Makefile  README.md  api.yaml  cdk.json  pyproject.toml  samconfig.toml  samconfig.yaml  subscriber-policies.yaml  subscriptions.yaml  template.yaml
unicorn_web/cdk/: app.py  unicorn_web_stack.py
unicorn_web/cdk.out/: manifest.json  tree.json  uni-prop-local-web.assets.json  uni-prop-local-web.template.json  uni-web-local-properties.assets.json  uni-web-local-properties.template.json
unicorn_web/cdk.out/asset.ce2f3595a340d6c519a65888ef97e3b9b64f053f83608e32cc28162e22d7d99a/: index.js
unicorn_web/cdk/app/: unicorn_web_api_stack.py  unicorn_web_events_stack.py  unicorn_web_integration_with_properties_stack.py  unicorn_web_property_publication_stack.py  unicorn_web_property_search_stack.py
unicorn_web/cdk/lib/: helper.py
unicorn_web/data/: load_data.sh  property_data.json
unicorn_web/iac/: README.md  domain.yaml  web-service.yaml
unicorn_web/iac/schema-registry/: PublicationApprovalRequested-schema.yaml
unicorn_web/iac/subscriptions/: unicorn-approvals-subscriptions.yaml
unicorn_web/infrastructure/: README.md  domain.yaml  samconfig.toml  web-service.yaml
unicorn_web/infrastructure/schema-registry/: PublicationApprovalRequested-schema.yaml
unicorn_web/infrastructure/subscriptions/: unicorn-approvals-subscriptions.yaml
unicorn_web/infrastructure/web-service/: samconfig.toml  template.yaml
unicorn_web/integration/: PublicationApprovalRequested.json  event-schemas.yaml  subscriber-policies.yaml  subscriptions.yaml
unicorn_web/src/approvals_service/: publication_approved.py  publication_approved_event_handler.py  request_approval_function.py
unicorn_web/src/publication_manager_service/: request_approval_function.py
unicorn_web/src/search_service/: property_search_function.py
unicorn_web/tests/integration/: __init__.py  test_request_approval_apigw.py
unicorn_web/tests/unit/: conftest.py  event_generator.py  helper.py  (+6 more)
(+178 files in other folders)
