[project]
name = "contracts_service"
version = "0.3.0"
description = "Unicorn Properties Contact Service"
authors = [
    {name = "Amazon Web Services"}
]

requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38",
    "aws-lambda-powertools[aws-sdk]>=3.15.0",
    "aws-xray-sdk>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "requests>=2.32.0",
    "importlib-metadata>=8.7.0",
    "pyyaml>=6.0.2",
    "arnparse>=0.0.2",
]

[tool.uv.workspace]
members = ["cdk"]

[tool.setuptools]
package-dir = {"contracts_service" = "src"}
packages = ["contracts_service"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -vv -W ignore::UserWarning"
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["."]

[tool.ruff]
line-length = 150

[dependency-groups]
dev = [
    "moto>=5.1.6",
    "pytest>=8.4.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
