[tool.poetry]
name = "properties_service"
version = "0.2.0"
description = "Unicorn Properties Property Service"
authors = ["Amazon Web Services"]
packages = [
    { include = "properties_service", from = "src" },
    { include = "schema", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.14"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.43.1"}
aws-xray-sdk = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
requests = "^2.32.3"
moto = {version = "^5.0.19", extras = ["dynamodb", "events", "sqs"]}
importlib-metadata = "^8.4.0"
pyyaml = "^6.0.2"
arnparse = "^0.0.2"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.43.1"}
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -vv -W ignore::UserWarning"
testpaths = ["tests/unit"]




[tool.ruff]
line-length = 150
