[project]
name = "properties_service"
version = "0.2.0"
description = "Unicorn Properties Property Service"
authors = [
    {name = "Amazon Web Services"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aws-lambda-powertools[tracer]>=3.9.0",
    "aws-xray-sdk>=2.14.0",
    "boto3>=1.37.23",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools[all]>=3.9.0",
    "requests>=2.32.3",
    "moto[dynamodb,events,sqs]>=5.0.14",
    "importlib-metadata>=8.4.0",
    "pyyaml>=6.0.2",
    "arnparse>=0.0.2",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.setuptools]
package-dir = {"properties_service" = "src"}
packages = ["properties_service"]
