[project]
name = "properties_service"
version = "0.3.0"
description = "Unicorn Properties Property Service"
authors = [
    {name = "Amazon Web Services"}
]

requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "aws-lambda-powertools[aws-sdk]>=3.3.0",
    "aws-xray-sdk>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "requests>=2.31.0",
    "importlib-metadata>=6.8.0",
    "pyyaml>=6.0.1",
    "arnparse>=0.0.2"
]

[tool.uv.workspace]
members = ["cdk"]

[tool.setuptools]
package-dir = {"contracts_service" = "src"}
packages = ["contracts_service"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -vv -W ignore::UserWarning"
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["."]

[tool.ruff]
line-length = 150

[dependency-groups]
dev = [
    "moto>=5.1.6",
    "pytest>=8.4.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"