[project]
name = "unicorn-shared"
version = "0.3.0"
description = "Unicorn Properties Shared Resources"
authors = [
    {name = "Amazon Web Services"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3>=1.37",
    "cdk-nag>=2.35.7",
    "aws-cdk-lib>=2.201.0",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "moto[dynamodb,events,sqs]>=5.0.14",
    "importlib-metadata>=8.4.0",
    "pyyaml>=6.0.2",
    "arnparse>=0.0.2",
    "ruff>=0.9.7",
    "tomli>=2.2.1",
]

[tool.setuptools]
package-dir = {"app" = "src"}
packages = ["app"]
