[project]
name = "unicorn_web"
version = "0.3.0"
description = "Unicorn Properties Web Service"
authors = [
    {name = "Amazon Web Services"}
]
requires-python = ">=3.13"

dependencies = [
    "boto3>=1.35",
    "aws-lambda-powertools[aws-sdk]>=3.3.0",
    "aws-xray-sdk>=2.12.0",
    "requests==2.31.0",
    "crhelper>=2.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "moto>=4.1.13",
    "importlib-metadata>=6.8.0",
    "pyyaml>=6.0.1",
    "arnparse>=0.0.2"
]

[tool.uv.workspace]
members = ["cdk"]

[tool.setuptools]
packages = ["approvals_service", "search_service", "schema"]
package-dir = {"approvals_service" = "src/approvals_service","search_service" = "src/search_service","schema" = "src/schema"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -vv -W ignore::UserWarning"
testpaths = ["tests/unit"]

[tool.ruff]
line-length = 150
