[project]
name = "web_service"
version = "0.2.0"
description = "Unicorn Properties Web Service"
authors = [
    {name = "Amazon Web Services"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aws-lambda-powertools[tracer]>=3.18.0",
    "aws-xray-sdk>=2.14.0",
    "boto3>=1.40.2",
    "requests>=2.32.3",
    "crhelper>=2.0.11",
]

[project.optional-dependencies]
dev = [
    "aws-lambda-powertools[all]>=3.18.0",
    "moto[dynamodb,events,sqs]>=5.1.9",
    "importlib-metadata>=8.4.0",
    "pyyaml>=6.0.2",
    "arnparse>=0.0.2",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.setuptools]
package-dir = {"web_service" = "src"}
packages = ["web_service"]
